AWS-CLOUD/terraforn-practice/project-3/case-Dynamic_blocks/a-without-dynamic/main.tf
resource "aws_security_group" "web_sg" {
    name = "web-sg"

    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"] 
    }

    ingress {
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
